JumpScript/tests/baselines/reference/jsFileCompilationTypeParameterSyntaxOfFunction.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
  Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
tests/cases/compiler/a.js(1,12): error TS8004: 'type parameter declarations' can only be used in a .jump file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
!!! error TS5055:   Adding a jmpconfig.json file will help organize projects that contain both JumpScript and JavaScript files. Learn more at https://aka.ms/jmpconfig.
==== tests/cases/compiler/a.js (1 errors) ====
    function F<T>() { }
               ~
!!! error TS8004: 'type parameter declarations' can only be used in a .jump file.